--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       content="Budget App"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="../apple-touch-icon.png">
     <title>Budget App</title>
   </head>
   <body>
